--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,8 +1,74 @@
+body {
+    position: relative;
+    /* height: 100vh; */
+    width: 100%;
+    /* align-items: center; */
+    /* justify-content: center; */
+    background-image: url('../images/yoga.jpg');
+    background-size: cover;
+}
+
+body::before {
+    content: "";
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background: rgba(0, 0, 0, 0.3)
+}
+
 form.signup,
 form.login {
     margin-top: 50px;
+    font-size: 20px;
 }
 
-.header {
-    margin: auto
+.form-group {
+    align-items: left;
+}
+
+h1 {
+    font-size: x-large;
+    color: white;
+    font-weight: bold;
+    text-align: center;
+}
+
+h2 {
+    color: white;
+    text-align: center;
+}
+
+h3 {
+    color: white;
+}
+
+.welcome {
+    font-size: x-large;
+    color: white;
+}
+
+.pwEm {
+    font-size: large;
+    font-weight: bold;
+    color: white;
+}
+
+h3 {
+    color: white;
+}
+
+.specialCard {
+    color: white;
+}
+
+.pageText {
+    color: black;
+    font-size: medium;
+    background-color: white
+}
+
+.routine {
+    background-color: black;
 }
