--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,3 +1,7 @@
+* {
+    z-index: 1;
+}
+
 body {
     position: relative;
     height: 100vh;
@@ -15,7 +19,8 @@ body::before {
     right: 0;
     bottom: 0;
     left: 0;
-    background: rgba(0, 0, 0, 0.3)
+    background: rgba(0, 0, 0, 0.3);
+    z-index: 0
 }
 
 form.signup,
@@ -72,4 +77,8 @@ h3 {
 .btn-info {
     background-color: rgb(120, 71, 133);
     color: black;
+}
+
+.bmi {
+    position: absolute;
 }
