--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,3 +1,9 @@
+/* Google fonts:
+font-family: 'Caveat Brush', cursive;
+font-family: 'McLaren', cursive;
+font-family: 'Padauk', sans-serif; 
+*/
+
 body {
     position: relative;
     height: 100vh;
