--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -2,6 +2,7 @@
 font-family: 'Caveat Brush', cursive;
 font-family: 'McLaren', cursive;
 font-family: 'Padauk', sans-serif; 
+font-family: 'Lato', sans-serif;
 */
 
 * {
@@ -25,14 +26,46 @@ body::before {
     right: 0;
     bottom: 0;
     left: 0;
-    background: rgba(0, 0, 0, 0.3);
+    background: rgba(0, 0, 0, 0.5);
     z-index: 0
+}
+
+.navbar {
+    background-color: #FEF9EE !important;
+    color: #784785 !important;
+}
+
+.nav-link {
+    color: #784785 !important;
+    font-family: 'Lato', sans-serif;
+    font-size: 1.25rem;
+    font-weight: bold;
+}
+
+.font-weight-bold {
+    font-family: 'Caveat Brush', cursive;
+    font-size: 3rem;
+    letter-spacing: 1px;
+    font-weight: bold;
+    color: #784785;
+    margin-top: 15px;
+}
+
+.loginSignup {
+    margin-top: 2rem;
+    padding-top: 2rem;
+    background-color: #B7E0F7;
+    transition: .5s ease;
+    backface-visibility: hidden;
+    box-shadow: 2px 2px 10px 1px black;
+    border-radius: 25px;
+    text-align: center;
 }
 
 form.signup,
 form.login {
     margin-top: 50px;
-    font-size: 20px;
+    font-size: 3rem;
 }
 
 h1 {
@@ -54,6 +87,7 @@ h3 {
 .welcome {
     font-size: x-large;
     color: white;
+    margin-bottom: -4rem;
 }
 
 .pwEm {
@@ -66,8 +100,16 @@ h3 {
     color: white;
 }
 
+.card-header {
+    font-family: 'McLaren', cursive;
+    color: white !important;
+    font-size: 2.5rem;
+    text-align: center;
+    padding-top: 2rem;
+}
+
 .specialCard {
-    padding-top: 15px;
+    padding-top: 2rem;
 }
 
 .pageText {
@@ -76,15 +118,42 @@ h3 {
     background-color: white
 }
 
-.routine {
-    background-color: black;
+
+/* .routine {
+    margin: auto 0;
+    width: 100%;
+} */
+
+.bodytitle {
+    font-family: 'Caveat Brush', cursive;
+    font-size: 4rem;
+    color: #784785;
+}
+
+.subtitle {
+    font-family: 'Caveat Brush', cursive;
+    font-size: 2rem;
+    color: #784785;
+}
+
+.musclegroup {
+    height: 400px;
+    color: white;
+    background-color: #B7E0F7;
+    border-radius: 15px;
+    box-shadow: 2px 2px 10px 1px black;
+    padding: 1.5rem;
+    margin: 1.5rem;
+    overflow: scroll;
 }
 
 .btn-info {
-    background-color: rgb(120, 71, 133);
-    color: black;
+    color: white;
+    font-family: 'Padauk', sans-serif;
+    background-color: rgb(159, 79, 182);
 }
 
 .bmi {
-    position: absolute;
+    /* position: absolute; */
+    padding-top: 2rem;
 }
