--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -15,7 +15,14 @@ body {
     width: 100%;
     /* align-items: center; */
     /* justify-content: center; */
-    background-image: url('../images/yoga.jpg');
+    /* background-image: url('../images/yoga.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center; */
+    background: url('../images/yoga.jpg') no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
     background-size: cover;
 }
 
@@ -30,7 +37,7 @@ body::before {
 }
 
 .navbar {
-    background-color: #FEF9EE !important;
+    background-color: rgba(254, 249, 238, .6) !important;
     color: #784785 !important;
 }
 
@@ -115,6 +122,10 @@ h3 {
     padding-top: 2rem;
 }
 
+.card-body {
+    background-color: white;
+}
+
 .pageText {
     color: black;
     font-size: medium;
@@ -128,6 +139,7 @@ h3 {
 } */
 
 .bodytitle {
+    padding-top: -1rem;
     font-family: 'Caveat Brush', cursive;
     font-size: 4rem;
     color: #784785;
@@ -142,9 +154,9 @@ h3 {
 .musclegroup {
     height: 400px;
     color: white;
-    background-color: #B7E0F7;
+    background-color: #48c5ebe7;
     border-radius: 15px;
-    box-shadow: 2px 2px 10px 1px black;
+    box-shadow: 3px 2px 10px 1px black;
     padding: 1.5rem;
     margin: 1.5rem;
     overflow: scroll;
@@ -160,20 +172,20 @@ h3 {
     font-weight: 600;
 }
 
-.us {   
-    height: auto;       
+.us {
+    height: auto;
     text-align: center;
-    font-size: 1.5rem;    
-    background-color: rgba(255,255,255, .7) !important;
-    color: black;    
+    font-size: 1.5rem;
+    background-color: rgba(255, 255, 255, .7) !important;
+    color: black;
     border-radius: 15px 50px 30px;
     float: left;
     width: 35rem;
-    margin: 4rem;  
+    margin: 4rem;
 }
 
 .card {
-    background-color:transparent;
+    background-color: transparent;
     border: 0rem;
 }
 
@@ -191,6 +203,7 @@ h3 {
 ul {
     color: #0808c0;
     font-size: 1.1rem;
+}
 
 .btn-info {
     color: white;
