--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -122,8 +122,7 @@ h3 {
 .card-body {
     margin-top: 2rem;
     padding-top: 2rem;
-    background-color: rgba(254, 249, 238, .8) !important;
-    ;
+    background-color: #8cc6d1cc;
     transition: .5s ease;
     backface-visibility: hidden;
     box-shadow: 2px 2px 10px 1px black;
