--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -48,6 +48,11 @@ body::before {
     font-weight: bold;
 }
 
+
+/* .navbar-toggler {
+    color: #784785 !important;
+} */
+
 .font-weight-bold {
     font-family: 'Caveat Brush', cursive;
     font-size: 3rem;
@@ -60,7 +65,7 @@ body::before {
 .loginSignup {
     margin-top: 2rem;
     padding-top: 2rem;
-    background-color: #B7E0F7;
+    background-color: #48c5ebf1;
     transition: .5s ease;
     backface-visibility: hidden;
     box-shadow: 2px 2px 10px 1px black;
@@ -72,6 +77,27 @@ form.signup,
 form.login {
     margin-top: 50px;
     font-size: 3rem;
+}
+
+.form-check {
+    font-size: 3rem;
+    text-align: center;
+    font-family: 'Lato', sans-serif;
+    font-weight: bold;
+}
+
+input.form-check-input {
+    width: 25px;
+    height: 25px;
+    box-shadow: 2px 2px 10px 1px black;
+}
+
+.form-control {
+    box-shadow: 2px 2px 5px 2px black;
+    width: 75%;
+    text-align: center;
+    font-size: 1.5rem;
+    margin: 0 auto;
 }
 
 h1 {
@@ -110,12 +136,21 @@ h3 {
     color: white;
 }
 
+.header {
+    font-size: 4rem;
+    font-weight: bold;
+    font-family: 'Caveat Brush', cursive;
+    letter-spacing: 5px;
+}
+
 .card-header {
     font-family: 'McLaren', cursive;
     color: white !important;
     font-size: 2.5rem;
     text-align: center;
     padding-top: 2rem;
+    border-bottom: none;
+    margin-top: 0px;
 }
 
 .specialCard {
@@ -124,12 +159,48 @@ h3 {
 
 .card-body {
     background-color: white;
+    box-shadow: 2px 2px 10px 2px #050505f3;
+    margin-top: 2rem;
+    padding-top: 2rem;
+    background-color: #48c5ebf3;
+    transition: .5s ease;
+    backface-visibility: hidden;
+    border-radius: 25px;
+    text-align: center;
 }
 
 .pageText {
     color: black;
     font-size: medium;
-    background-color: white
+    background-color: transparent;
+}
+
+#timerSent {
+    text-align: center;
+    font-family: 'Lato', sans-serif;
+    color: white;
+    font-size: 8rem;
+    background-color: #48c5ebf3;
+    box-shadow: 2px 2px 10px 2px #050505f3;
+}
+
+#vgName {
+    background-color: #48c5ebf3;
+    text-align: center;
+    margin-bottom: 2rem;
+    font-family: 'Lato', sans-serif;
+    color: white;
+    font-size: 6rem;
+}
+
+#vgDesc {
+    box-shadow: 2px 2px 10px 2px #050505f3;
+    margin-top: 2rem;
+    padding-top: 2rem;
+    background-color: #48c5ebf3;
+    color: white;
+    overflow: scroll;
+    margin-left: 1rem;
 }
 
 
@@ -149,6 +220,15 @@ h3 {
     font-family: 'Caveat Brush', cursive;
     font-size: 2rem;
     color: #784785;
+}
+
+#submit {
+    height: 3rem;
+    color: blueviolet;
+    background-color: white;
+    box-shadow: 2px 2px 5px 1px black;
+    font-size: 1.75rem;
+    font-weight: bold;
 }
 
 .musclegroup {
