--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -83,15 +83,35 @@ form.login {
 
 .form-check {
     font-size: 3rem;
-    text-align: center;
+    text-align: left;
     font-family: 'Lato', sans-serif;
     font-weight: bold;
+    padding-left: 7rem;
+}
+
+.form-check-label {
+    margin-left: 2rem;
+}
+
+.form-check-input {
+    margin-bottom: 2rem;
+}
+
+.survey {
+    background-color: #48c5ebf1 !important;
+}
+
+.intro {
+    padding-bottom: 2rem;
+    padding-top: 0 !important;
+    background-color: rgba(0,0,0,0) !important;
 }
 
 input.form-check-input {
     width: 25px;
     height: 25px;
     box-shadow: 2px 2px 10px 1px black;
+    margin-top: 1.25rem;
 }
 
 .form-control {
@@ -112,6 +132,10 @@ h1 {
 h2 {
     color: white;
     text-align: center;
+}
+
+.hide {
+    visibility: hidden;
 }
 
 .dev-title {
@@ -138,11 +162,18 @@ h3 {
     color: white;
 }
 
+.borderline {
+    box-shadow: 2px 2px 10px 2px #050505f3 !important;
+    border-radius: 20px;
+    font-family: ‘Lato’, sans-serif;
+}
+
 .header {
-    font-size: 4rem;
-    font-weight: bold;
-    font-family: 'Caveat Brush', cursive;
-    letter-spacing: 5px;
+    padding-top: 0 !important;
+    font-size: 4rem !important;
+    font-weight: bold !important;
+    font-family: 'Caveat Brush', cursive !important;
+    letter-spacing: 5px !important;
 }
 
 .card-header {
@@ -153,6 +184,7 @@ h3 {
     padding-top: 2rem;
     border-bottom: none;
     margin-top: 0px;
+    background-color: rgba(0,0,0,0.5);
 }
 
 .card-body {
@@ -165,7 +197,6 @@ h3 {
     backface-visibility: hidden;
     margin-top: 2rem;
     padding-top: 2rem;
-    background-color: #8cc6d1cc;
     transition: .5s ease;
     backface-visibility: hidden;
     box-shadow: 2px 2px 10px 1px black;
@@ -207,6 +238,10 @@ h3 {
     margin-left: 1rem;
 }
 
+#vgDesc::-webkit-scrollbar {
+    display: none;
+}
+
 
 /* .routine {
     margin: auto 0;
@@ -238,7 +273,7 @@ h3 {
 .musclegroup {
     height: 400px;
     color: white;
-    background-color: #8cc6d1cc;
+    background-color: #48c5ebf3;
     border-radius: 15px;
     box-shadow: 3px 2px 10px 1px black;
     padding: 1.5rem;
@@ -301,4 +336,12 @@ ul {
 
 .bmi {
     padding-top: 2rem;
+}
+
+.specialCard {
+    padding-right: 3rem;
+}
+
+.cdc {
+    padding-left: 1rem;
 }
