--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -139,7 +139,8 @@ h2 {
 }
 
 .dev-title {
-    color: black;
+    color: #784785;
+    font-family: 'Caveat Brush', cursive;
 }
 
 h3 {
@@ -188,10 +189,6 @@ h3 {
 }
 
 .card-body {
-    background-color: white;
-    box-shadow: 2px 2px 10px 2px #050505f3;
-    margin-top: 2rem;
-    padding-top: 2rem;
     background-color: #48c5ebf3;
     transition: .5s ease;
     backface-visibility: hidden;
@@ -199,9 +196,10 @@ h3 {
     padding-top: 2rem;
     transition: .5s ease;
     backface-visibility: hidden;
-    box-shadow: 2px 2px 10px 1px black;
+    box-shadow: 2px 2px 10px 2px black;
     border-radius: 25px;
     text-align: center;
+    margin-top: 0;
 }
 
 .pageText {
@@ -244,7 +242,7 @@ h3 {
 
 span.navbar-toggler-icon {
     color: white;
-    background-color: rgb(159, 79, 182);
+    background-color: #784785);
     box-shadow: 2px 2px 10px 2px #050505f3 !important;
     border-radius: 3px;
 }
@@ -266,11 +264,12 @@ span.navbar-toggler-icon {
     font-family: 'Caveat Brush', cursive;
     font-size: 2rem;
     color: #784785;
+    font-family: 'Lato', sans-serif;
 }
 
 #submit {
     height: 3rem;
-    color: blueviolet;
+    color: #784785;
     background-color: white;
     box-shadow: 2px 2px 5px 1px black;
     font-size: 1.75rem;
@@ -300,6 +299,7 @@ span.navbar-toggler-icon {
     text-align: center;
     color: rgb(255, 255, 255);
     font-weight: 600;
+    background-color: rgba(0, 0, 0, 0.5);
 }
 
 .us {
@@ -310,7 +310,7 @@ span.navbar-toggler-icon {
     color: black;
     border-radius: 15px 50px 30px;
     float: left;
-    width: 35rem;
+    width: 15rem;
     margin: 4rem;
 }
 
@@ -327,7 +327,9 @@ span.navbar-toggler-icon {
 .card-text {
     height: 15rem;
     font-size: 1.1rem;
+    color: white;
     overflow: auto;
+    font-family: 'Lato', sans-serif;
 }
 
 ul {
