--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -242,7 +242,7 @@ h3 {
 
 span.navbar-toggler-icon {
     color: white;
-    background-color: #784785);
+    background-color: #784785;
     box-shadow: 2px 2px 10px 2px #050505f3 !important;
     border-radius: 3px;
 }
